--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.3.0",
+    "@commitlint/config-conventional": "^17.3.0",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
@@ -37,7 +39,13 @@
     "eslint-plugin-react": "^7.31.11",
     "husky": "^8.0.0",
     "prettier": "2.8.1",
+    "semantic-commit-emoji": "^0.6.2",
     "start-server-and-test": "^1.15.2",
     "typescript": "^4.7.4"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
   }
 }
