--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "start": "next start",
     "cypress": "cypress open",
     "cypress:headless": "cypress run",
-    "lint": "eslint . --ext .ts,.tsx",
+    "lint": "next lint",
+    "lintt": "eslint . --ext .ts,.tsx",
     "lint:fix": "npm run lint -- --fix",
+    "prettier:fix": "prettier --write .",
+    "fix": "npm run lint:fix && npm run prettier:fix",
     "e2e": "start-server-and-test start http://localhost:3000 cypress",
     "e2e:headless": "start-server-and-test start http://localhost:3000 cypress:headless",
     "prepare": "husky install",
@@ -18,30 +21,28 @@
     "test-all": "npm run check-format && npm run check-lint && npm run check-types && npm run build"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "styled-components": "^5.3.5"
+    "next": "13.0.7",
+    "prettier": "^2.8.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "styled-components": "5.3.5"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.3.0",
-    "@commitlint/config-conventional": "^17.3.0",
-    "@types/node": "^18.0.0",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
-    "@types/styled-components": "^5.1.25",
+    "@commitlint/cli": "17.3.0",
+    "@commitlint/config-conventional": "17.3.0",
+    "@types/node": "18.0.0",
+    "@types/react": "18.0.14",
+    "@types/react-dom": "18.0.5",
+    "@types/styled-components": "5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
-    "@typescript-eslint/parser": "^5.46.1",
-    "cypress": "^12.1.0",
-    "eslint": "^8.29.0",
-    "eslint-config-google": "^0.14.0",
+    "cypress": "12.1.0",
+    "eslint": "^8.30.0",
+    "eslint-config-next": "13.0.7",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-react": "^7.31.11",
-    "husky": "^8.0.0",
-    "prettier": "2.8.1",
-    "semantic-commit-emoji": "^0.6.2",
-    "start-server-and-test": "^1.15.2",
-    "typescript": "^4.7.4"
+    "husky": "8.0.0",
+    "semantic-commit-emoji": "0.6.2",
+    "start-server-and-test": "1.15.2",
+    "typescript": "4.7.4"
   },
   "commitlint": {
     "extends": [
